layout shift moviment fixed

--- a/styles/fields/inputs.css
+++ b/styles/fields/inputs.css
@@ -6,7 +6,9 @@ select {
     color: var(--text-secundary);
 
     border-radius: .8rem;
-    border: 1px solid var(--stroke-default);
+    border: 2px solid transparent;
+
+    outline: 1px solid var(--stroke-default);
     padding: 1.2rem 1.6rem;
 
     font: var(--text);
@@ -25,7 +27,7 @@ textarea:focus,
 select:focus,
 input[type="date"]:focus-within {
     outline: .4rem solid var(--surface-secundary);
-    border: .2rem solid var(--stroke-highlight);
+    border-color: var(--stroke-highlight);
     outline-offset: .1px;
 }
 
